creating navigate component, continuation

--- a/src/styles/Navigate.module.css
+++ b/src/styles/Navigate.module.css
@@ -1,4 +1,6 @@
 .navigate {
-    background-color: #bbb;
     padding: 30px;
+    margin: 10px;
+    border-radius: 8px;
+    background-color: darkviolet;
 }
